# hello-tofu

./: .gitignore  .terraform.lock.hcl  Cargo.toml  README.md  plan.md  providers.tf.json
examples/: generate.rs  lambda.rs  lightsail.rs  lightsail.ts
src/: binding_generator.rs  config_exporter.rs  config_generator.rs  lib.rs  main.rs  schema_binding_generator.rs  terra.rs
src/providers/: aws_lambda.rs  aws_lightsail.rs  cloudflare_dns.rs  mod.rs
src/schema_bindgen/: binding.rs  config.rs  emit.rs  mod.rs
tests/: schema_integration_test.rs
tests/fixtures/: filtered_schema.jsonc
