[package]
name = "hello-tofu"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
serde-generate = "0.33"
serde-reflection = "0.5"
textwrap = "0.16"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "lightsail"
path = "examples/lightsail.rs"

[[example]]
name = "lambda"
path = "examples/lambda.rs"
